--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,7 @@ sysinfo.txt
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
