[add] preyer skill predictions

--- a/.gitignore
+++ b/.gitignore
@@ -425,3 +425,5 @@ ASALocalRun/
 /Assets/Plugins/UniRx*
 /Assets/Demigiant/DOTween*
 /Assets/Resources/DOTween*
+Assets/Fonts/VacuumHandle1.prefab.meta
+Assets/Fonts/VacuumHandle1.prefab
